--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "build": "NODE_ENV=production webpack --progress --colors",
     "dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc": "jsdoc -c jsdoc.conf.json"
@@ -39,10 +40,12 @@
     "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "file-loader": "^0.8.5",
     "jsdoc": "^3.4.0",
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
     "shader-loader": "^1.1.4",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   }
