--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lib3d",
   "version": "0.0.0",
-  "description": "",
+  "description": "Display 3D library on your webpage",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --colors",
     "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "karma start --single-run",
+    "test-watch": "karma start",
     "doc": "jsdoc -c jsdoc.conf.json"
   },
   "repository": {
@@ -41,9 +42,16 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "file-loader": "^0.8.5",
+    "jasmine-core": "^2.4.1",
     "jsdoc": "^3.4.0",
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-read-json": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "shader-loader": "^1.1.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
