--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "build": "NODE_ENV=production webpack --progress --colors",
+    "prebuild": "npm run doc",
+    "build": "cross-env NODE_ENV=production webpack --progress --colors",
     "dev": "webpack-dev-server",
     "test": "karma start --single-run",
     "test-watch": "karma start",
@@ -41,6 +42,7 @@
     "babel-loader": "^6.2.0",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
+    "cross-env": "^1.0.7",
     "file-loader": "^0.8.5",
     "jasmine-core": "^2.4.1",
     "jsdoc": "^3.4.0",
