--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "prebuild": "npm run doc",
+    "prebuild": "npm run test & npm run doc",
     "build": "cross-env NODE_ENV=production webpack --progress --colors",
     "dev": "webpack-dev-server",
     "test": "karma start --single-run",
@@ -44,12 +44,14 @@
     "babel-preset-es2015": "^6.3.13",
     "cross-env": "^1.0.7",
     "file-loader": "^0.8.5",
+    "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.4.1",
     "jsdoc": "^3.4.0",
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
     "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-read-json": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
