Updated webpack config to work properly on windows

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "shader-loader": "^1.1.4",
+    "three": "0.71.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
