--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lib3d",
   "version": "0.0.0",
   "description": "Display 3D library on your webpage",
-  "main": "index.js",
+  "main": "/src/index.js",
   "directories": {
     "test": "test"
   },
