--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preversion": "npm run build",
     "version": "",
     "postversion": "npm run push && npm publish",
-    "push": "git push && git push --tags",
+    "push": "git push origin HEAD --follow-tags",
     "compile": "cross-env NODE_ENV=production webpack --progress --colors",
     "prebuild": "npm run test && npm run doc",
     "build": "npm run compile",
