--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "webpack-dev-server",
     "test": "karma start --single-run",
     "test-watch": "karma start",
-    "doc": "jsdoc -c jsdoc.conf.json",
+    "doc": "esdoc -c ./esdoc.json",
     "update-gh-pages": "git push origin `git subtree split --prefix docs master`:gh-pages --force"
   },
   "repository": {
@@ -45,10 +45,10 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "cross-env": "^1.0.7",
+    "esdoc": "^0.4.6",
     "file-loader": "^0.8.5",
     "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.4.1",
-    "jsdoc": "^3.4.0",
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
     "json-loader": "^0.5.4",
