--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "Display 3D library on your webpage",
   "main": "/dist/lib3d.js",
   "scripts": {
+    "postpublish": "npm run doc-publish",
     "preversion": "npm run build",
     "version": "",
     "postversion": "npm run push",
     "push": "git push origin HEAD --follow-tags",
     "compile": "cross-env NODE_ENV=production webpack --progress --colors",
-    "prebuild": "npm run test && npm run doc",
+    "prebuild": "npm run test",
     "build": "npm run compile",
     "dev": "webpack-dev-server",
     "test": "karma start --single-run",
     "test-watch": "karma start",
     "doc": "esdoc -c ./esdoc.json",
-    "update-gh-pages": "git push origin `git subtree split --prefix docs master`:gh-pages --force"
+    "doc-publish": "esdoc-uploader"
   },
   "repository": {
     "type": "git",
@@ -46,6 +47,7 @@
     "babel-preset-es2015": "^6.3.13",
     "cross-env": "^1.0.7",
     "esdoc": "^0.4.6",
+    "esdoc-uploader": "^1.0.1",
     "file-loader": "^0.8.5",
     "isparta-loader": "^2.0.0",
     "jasmine-core": "^2.4.1",
