--- a/package.json
+++ b/package.json
@@ -4,20 +4,15 @@
   "description": "Display 3D library on your webpage",
   "main": "/dist/lib3d.js",
   "scripts": {
-    "postpublish": "npm run doc-publish",
-    "preversion": "npm run build",
-    "version": "",
-    "postversion": "npm run push",
     "push": "git push origin HEAD --follow-tags",
-    "compile": "cross-env NODE_ENV=production webpack --progress --colors",
-    "prebuild": "npm run test",
-    "build": "npm run compile",
     "dev": "webpack-dev-server",
     "test": "karma start --single-run",
     "test-watch": "karma start",
     "doc": "esdoc -c ./esdoc.json",
-    "doc-publish": "esdoc-uploader",
-    "deploy": ""
+    "deploy": "npm run build && npm publish",
+    "build": "webpack --progress --colors",
+    "postpublish": "npm run doc-publish",
+    "doc-publish": "esdoc-uploader"
   },
   "repository": {
     "type": "git",
@@ -39,14 +34,13 @@
   },
   "homepage": "https://github.com/Galiaf47/lib3d#readme",
   "peerDependencies": {
-    "lodash": "^4.6.1",
+    "lodash": "*",
     "three": "0.71.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
-    "cross-env": "^1.0.7",
     "esdoc": "^0.4.6",
     "esdoc-uploader": "^1.0.1",
     "file-loader": "^0.8.5",
