--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.3.13",
     "esdoc": "^0.4.6",
     "esdoc-uploader": "^1.0.1",
@@ -58,11 +59,14 @@
     "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-read-json": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "lib3d-objects": "0.0.0",
     "lodash": "^3.10.1",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "shader-loader": "^1.1.4",
     "three": "^0.71.0",
     "url-loader": "^0.5.7",
