--- a/package.json
+++ b/package.json
@@ -35,9 +35,6 @@
     "url": "https://github.com/Galiaf47/lib3d/issues"
   },
   "homepage": "https://github.com/Galiaf47/lib3d#readme",
-  "peerDependencies": {
-    "three": "^0.71.0"
-  },
   "devDependencies": {
     "babel-core": "^6.3.26",
     "babel-loader": "^6.2.0",
@@ -70,5 +67,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "three": "^0.71.0"
   }
 }
