Made threejs peer dependency

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
-  "dependencies": {
+  "peerDependencies": {
     "three": "^0.75.0"
   }
 }
